syntax = "proto3";

option go_package = "github.com/PaluMacil/grpc-jwt-auth-helloworld/pb";

package pb;

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}

service Token {
  rpc Refresh (RefreshRequest) returns (RefreshReply) {}
}

message RefreshRequest {
  string RefreshToken = 1;
}

message RefreshReply {
  string AccessToken = 1;
}